# stepmania_mini

./: .gitignore  ANDROID_BUILD.md  Cargo.toml  debug.bat  last_selection.txt
.github/workflows/: android.yml  build.yml
scripts/: build-android-native.ps1
src/: chart.rs  dwi_parser.rs  game.rs  main.rs  sm_parser.rs  song_select_services.rs
