[package]
name = "mini_stepmania_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
macroquad = "0.4"
rodio = { version = "0.20", features = ["symphonia-aac", "symphonia-mp3", "symphonia-vorbis", "symphonia-wav"] }
lewton = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["aac", "mp3", "ogg", "wav", "vorbis"] }
image = "0.24"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[package.metadata.android]
package = "com.stepmania.ministepmania"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.application]
label = "Mini StepMania"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"
